# WaveSim2.0

./: README.md
Base-Motor/: Makefile  main.cpp
Base-Motor/Serial_Test_Linux/: CMakeCache.txt  test.cpp
CLI/: Makefile  main
CLI/src/: main.cpp
GUI/: WaveGUI.pro
GUI/inc/: maincontrol.hpp
GUI/resource/: Switch.qml  main.qml  qml.qrc
GUI/src/: main.cpp  maincontrol.cpp
Jonswap/: CMakeLists.txt
Jonswap/src/: Jonswap.cpp  Jonswap.hpp  main  main.cpp  output.csv  plot.py
Linux_Software/ExarKernelDriver/: .Module.symvers.cmd  .modules.order.cmd  .xr_usb_serial_common.ko.cmd  .xr_usb_serial_common.mod.cmd  .xr_usb_serial_common.mod.o.cmd  .xr_usb_serial_common.o.cmd  modules.order  xr_usb_serial_common.c  xr_usb_serial_common.ko  xr_usb_serial_common.mod  xr_usb_serial_common.mod.c
Source Code/: BaseMotor.cpp  BaseMotor.hpp  CartMotor.hpp  CartThread.cpp  CartThread.hpp  Jonswap.cpp  Makefile  SPI.cpp  SPI.hpp  main.cpp  test.cpp
Stepper_Test_Code/Stepper_Test_Code/: Stepper_Test_Code.ino
WaveGUI/: Slider.qml  Switch.qml  WaveGUI.pro  WaveGUI.pro.user.bc60381  basemotor.cpp  basemotor.h  cartmotor.h  cartthread.cpp  cartthread.h  main.cpp  main.qml  maincontrol.cpp  maincontrol.h  spi.cpp  spi.h
code/: Jonswap.cpp  Jonswap.hpp  basemotor.cpp  basemotor.hpp  cartmotor.hpp  cartthread.hpp  spi.cpp  spi.hpp
common/inc/: Jonswap.hpp  basemotor.hpp  cartmotor.hpp  cartthread.hpp  spi.hpp
common/src/: Jonswap.cpp  basemotor.cpp  cartmotor.cpp  cartthread.cpp  spi.cpp
config/: config.mtr
wave-simulator-design-develop-tools/tools/: myfile.csv  (+40 more)
(+6 files in other folders)
